--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -34,6 +34,7 @@ jobs:
   release:
     runs-on: ubuntu-20.04
     needs: build
+    if: "${{ github.ref_type == 'tag' }}"
     steps:
       - name: Fetch release artifact
         uses: actions/download-artifact@v4
