--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Setup NodeJS
@@ -32,7 +32,7 @@ jobs:
           path: dist/${{ steps.names.outputs.artifact }}.tar.gz
 
   release:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: build
     if: "${{ github.ref_type == 'tag' }}"
     steps:
